--- a/app/src/main/res/layout/poll_row.xml
+++ b/app/src/main/res/layout/poll_row.xml
@@ -4,17 +4,12 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/polls_thumb"
-        android:layout_margin="5dp" />
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.63">
+        android:layout_weight="0.63"
+        android:layout_margin="5dp">
 
         <TextView
             android:layout_width="wrap_content"
