--- a/app/src/main/res/layout/poll_listing_row.xml
+++ b/app/src/main/res/layout/poll_listing_row.xml
@@ -9,15 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.63"
-        android:layout_margin="5dp">
+        android:layout_margin="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Question"
-            android:id="@+id/poll_question"
-            android:layout_margin="5dp"
+            android:id="@+id/tfQuestion"
             android:textColor="@color/colorPrimary" />
 
         <TextView
@@ -25,16 +24,16 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="x answers"
-            android:id="@+id/poll_responses"
-            android:layout_margin="5dp" />
+            android:id="@+id/tfResponsesCount"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Added on"
-            android:id="@+id/poll_added_on"
-            android:layout_margin="5dp" />
+            android:id="@+id/tfAddedOn"
+            />
 
     </LinearLayout>
 
