--- a/app/src/main/res/layout/activity_poll_list.xml
+++ b/app/src/main/res/layout/activity_poll_list.xml
@@ -15,19 +15,21 @@
         android:layout_height="match_parent"
         android:id="@+id/pbBody">
 
-        <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
+        <com.plickers.android.ui.views.TitleView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/pbLoadingPolls"
-            android:indeterminate="true" />
+            custom:backgroundColor="@color/colorPrimary"
+            custom:titleColor="@android:color/white"
+            custom:titleString="@string/polls">
+
+        </com.plickers.android.ui.views.TitleView>
 
         <com.plickers.android.ui.views.SearchListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/lvSearch"
-            custom:noResultsText="No polls found. You might want to ease your filters. "
-            />
+            custom:noResultsText="No polls found. You might want to ease your filters. ">
+        </com.plickers.android.ui.views.SearchListView>
 
     </LinearLayout>
 
